src/styles/index.scss
body {
	background-color: #ccc;
	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;

	a {
		color: #000;
	}

	.page404 {
		section {
			font-size: 5rem;
			color: #777;
			margin-bottom: 1rem;
		}
	}

	section.siteContent {
		.stats {
			text-align: center;
			font-size: 0.9rem;
			font-variant: small-caps;
			color: #777;
			font-style: italic;
			margin-bottom: 0.5rem;
		}
		.tagsArea {
			display: flex;
			gap: 0.5rem;
			flex-wrap: wrap;
			justify-content: center;
			margin: 2rem 1rem 1.5rem 1rem;

			button {
				font-size: 0.9rem;
				&.selected {
					color: #000;
					border: 1px solid #333;
					border-radius: 0.3rem;
					background-color: rgb(255, 255, 255);
				}
				&.notSelected {
					color: #555;
					border: 1px solid #666;
					border-radius: 0.3rem;
					background-color: #ddd;
					&:hover {
						background-color: #eee;
						color: #000;
					}
				}

				&.showAll {
					font-variant: small-caps;
				}
			}
		}

		nav {
			margin-bottom: 1rem;
			background-color: #aaa;
			padding: 0.5rem 0.7rem;
			border-radius: 0.3rem;

			ul {
				display: flex;
				justify-content: space-between;
				align-items: center;
				gap: 0.5rem;
				li {
					a {
						text-decoration: none;
						color: #000;
						&.active {
							color: #000;
							font-weight: bold;
						}
					}
				}
			}
		}

		.blogEntry {
			background-color: #ccc;
			padding: 1rem;
			border-radius: 0.5rem;
			margin-bottom: 1rem;

			.blogEntryHeader {
				display: flex;
				justify-content: space-between;
				.date {
					font-size: 0.8rem;
					color: #555;
					margin-bottom: 0.1rem;
					font-style: italic;
				}
				.deleteIcon {
					color: #777;
					font-size: 0.8rem;
					cursor: pointer;
				}
			}

			.title {
				font-size: 1.3rem;
				margin-bottom: 0.2rem;
				line-height: 1.5rem;
			}

			.tags {
				font-family: monospace;
				color: #555;
				margin-top: 0.3 rem;
				margin-bottom: 0.5rem;
				display: flex;
				gap: 0.2rem;
				button {
					font-size: 0.7rem;
					&.selected {
						color: #000;
						border: 1px solid #333;
						border-radius: 0.3rem;
						background-color: #fff;
					}
					&.notSelected {
						color: #555;
						border: 1px solid #666;
						border-radius: 0.3rem;
						background-color: #ddd;
						&:hover {
							background-color: #eee;
							color: #000;
						}
					}
				}
			}

			.body {
				font-style: italic;
				line-height: 1.4rem;
			}
		}
	}
}

/* smartphone view */
@media (max-width: 577px) {
	body {
		margin: 1rem;

		.header {
			display: flex;
			justify-content: space-between;
			align-items: center;
			margin-bottom: 0.7rem;
			h1 {
				a.mainHeader {
					font-size: 1.3rem;
					font-weight: normal;
					font-style: normal;
					color: #000;
					&.active {
						color: #000;
						font-weight: normal;
					}
				}
			}
			a {
				font-size: 0.8rem;
				text-decoration: none;
				color: #555;
				font-style: italic;
				&.active {
					color: #000;
					font-weight: bold;
					font-style: normal;
				}
			}
		}
		.pageMakingOf {
			h2 {
				font-size: 1.5rem;
				margin: 2rem 0 0.7rem 0;
			}
			h3 {
				font-size: 0.8rem;
				font-style: italic;
				margin: 0 0 1.7em 0;
			}
			p.intro {
				line-height: 1.4rem;
			}
		}

		form.createBlogEntry {
			width: 100%;

			fieldset {
				margin: 2rem 0;
				border: solid 1px #ccc;
				border-radius: 6px;

				legend {
					margin-bottom: 1rem;
				}

				.rows {
					display: flex;
					flex-direction: column;
					gap: 1rem;

					.row {
						display: flex;
						flex-direction: column;
						gap: 0.2rem;
						.rowHeader {
							display: flex;
							align-items: center;
							justify-content: space-between;
							label {
								font-size: 0.8rem;
							}
							div {
								width: 60%;
								text-align: right;
								span.message {
									color: #666;
									font-size: 0.8rem;
								}
								span.error {
									color: brown;
									font-style: italic;
									font-size: 0.8rem;
								}
							}
						}
						input {
							width: 98%;
							font-size: 1.1rem;
							font-family: monospace;
							&:focus {
								outline: 1px solid #999;
							}
						}

						textarea.body {
							height: 10rem;
							font-size: 1.1rem;
							font-family: monospace;
						}

						textarea.tagsExpanded {
							height: 6rem;
							font-size: 1.1rem;
							font-family: monospace;
						}

						.availableTags {
							font-size: 1rem;
							display: flex;
							gap: 0.4rem;
							flex-wrap: wrap;
							span {
								cursor: pointer;
								&:hover {
									text-decoration: underline;
								}
							}
						}
					}

					.buttonRow {
						display: flex;
						justify-content: space-between;
						button {
							font-size: 0.9rem;
						}
					}
				}
			}
		}
	}
}

/* computer/tablet view */
@media (min-width: 578px) {
	body {
		margin: 1rem;

		section.siteContent {
			max-width: 40rem;
			margin: 0 auto;
			background-color: #ddd;
			padding: 1rem;
			border-radius: 0.5rem;
			.header {
				display: flex;
				justify-content: space-between;
				align-items: center;
				margin-bottom: 0.7rem;
				h1 {
					a.mainHeader {
						font-size: 1.3rem;
						font-weight: normal;
						font-style: normal;
						color: #000;
						&.active {
							color: #000;
							font-weight: normal;
						}
					}
				}
				a {
					font-size: 1rem;
					text-decoration: none;
					color: #777;
					font-style: italic;
					&.active {
						color: #000;
						font-weight: bold;
						font-style: normal;
					}
				}
			}
			.pageMakingOf {
				h2 {
					font-size: 1.5rem;
					margin: 2rem 0 0.7rem 0;
				}
				h3 {
					font-size: 0.8rem;
					font-style: italic;
					margin: 0 0 1.7em 0;
				}
				p.intro {
					line-height: 1.4rem;
				}
			}
		}

		form.createBlogEntry {
			width: 100%;

			fieldset {
				margin: 2em;
				padding: 1em 2em 2em 2em;
				border: solid 1px #ccc;
				border-radius: 6px;
				background-color: #eee;
				.rows {
					display: flex;
					flex-direction: column;
					gap: 1rem;

					.row {
						display: flex;
						flex-direction: column;
						gap: 0.2rem;
						.rowHeader {
							display: flex;
							align-items: center;
							justify-content: space-between;
							label {
								font-size: 0.8rem;
							}
							div {
								span.message {
									color: #666;
									font-size: 0.8rem;
								}
								span.error {
									color: brown;
									font-style: italic;
									font-size: 0.8rem;
								}
							}
						}
						input {
							width: 98%;
							font-size: 1.1rem;
							font-family: monospace;
							&:focus {
								outline: 1px solid #999;
							}
						}

						textarea.body {
							height: 10rem;
							font-size: 1.1rem;
							font-family: monospace;
						}

						.availableTags {
							font-size: 0.7rem;
							display: flex;
							gap: 0.4rem;
							flex-wrap: wrap;
							span {
								cursor: pointer;
								&:hover {
									text-decoration: underline;
								}
							}
						}
					}
					.buttonRow {
						display: flex;
						justify-content: space-between;
						button {
							font-size: 0.9rem;
						}
					}
				}
			}
		}
	}
}

